# unity_lan

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.original.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  buf.gen.yaml  coordinator.example.toml  coordinator.test.toml  engine.example.toml  go.mod  go.sum  main.go  project.json  tools.go  unitylan.exe.manifest  unitylan.syso
.cargo/: audit.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/common/: Cargo.toml
crates/common/src/: api.rs  attestation.rs  control.rs  crypto.rs  lib.rs  netid.rs  p2p.rs  relay.rs  rotation.rs  update.rs  winsec.rs  wire.rs
crates/common/src/control/: expose.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: admin.html  api.rs  commands.rs  config.rs  discord.rs  limiter.rs  main.rs  oauth.rs  presence.rs  roles.rs  rotate.rs  signer.rs  store.rs  stun.rs  versions.rs
crates/coordinator/src/api/: admin.rs  mod.rs  ratelimit.rs  wake.rs
crates/engine/: Cargo.toml
crates/engine/src/: beacon.rs  config.rs  control.rs  coord.rs  daemon.rs  dns.rs  ice.rs  keys.rs  main.rs  nat.rs  netcfg.rs  oauth.rs  p2p.rs  ping.rs  relay.rs  resolver.rs  selfupdate.rs  service.rs  shutdown.rs  testutil.rs  util.rs
crates/engine/src/control/: client.rs  mod.rs  server.rs  status.rs
crates/engine/src/fw/: mod.rs  nftables.rs  windows.rs
crates/engine/src/resolver/: linux.rs  mod.rs  windows.rs
crates/engine/src/wg/: mod.rs  userspace.rs  windows.rs
crates/engine/tests/: ice_spike.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/examples/: fake-engine.rs
crates/gui/src/: ctl.rs  main.rs  svc.rs  view.rs  widgets.rs
crates/gui/src/tray/: linux.rs  mod.rs  stub.rs  windows.rs
docs/: coordinator-setup.md  design.md  discord-setup.md  gossip-refresh.md  prior-art.md  release-signing.md  roadmap.md  technical.md
frontend/: frontend.go  package-lock.json  package.json  rollup.config.js
frontend/public/: AuthSuccess.html  index.html
frontend/src/: App.svelte  main.ts  wails_store.ts
frontend/src/components/: DeviceCheck.svelte  FriendList.svelte  GuildList.svelte
internal/app/client/: auth.go  context.go  ext_clients.go  friends.go  frontend.go  guilds.go  service.go  wg_interface.go
internal/app/server/: api.go  context.go  ext_clients.go  service.go
internal/pkg/admin/: admin.go
internal/pkg/auth/: token.go
internal/pkg/debug/: http_client.go
internal/pkg/wails_store/: store.go
internal/pkg/wg/: device.go
packaging/: README.md  build.sh
packaging/config/: engine.toml
packaging/docker/: coordinator.Dockerfile
packaging/gui/: unitylan-gui.desktop
packaging/init/systemd/: unitylan-engine.service
packaging/nfpm/: desktop.yaml  engine.yaml
packaging/scripts/: engine-postinstall.sh  engine-postremove.sh  engine-preremove.sh
packaging/windows/: build.ps1  engine.toml  unitylan.wxs
pkg/credstore/: credstore.go  credstore_darwin.go  credstore_linux.go  credstore_windows.go
pkg/openurl/: open_darwin.go  open_linux.go  open_windows.go
pkg/wg_iface/: iface.go  iface_linux.go  iface_windows.go
proto/unitylan/v1/: api.proto
scripts/: coordinator-scale-test.sh  dev-install.ps1  dev-run.ps1  dev-run.sh  expose-net-test.sh  gossip-test.sh  gui-login-test.sh  ice-test.sh  mesh-test.sh  nat-test.sh  net-toggle-test.sh  oauth-test.sh  own-device-test.sh  readme-demo.sh  relay-test.sh  resolver-hook-test.sh  rotation-test.sh  update-release-config.sh  update-test.sh  wg-tunnel-test.sh
secrets/: secrets.go
server/: main.go
