[package]
name = "unitylan-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true

ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
ipnet = "2"
siphasher = "1"
hmac = "0.12"
sha1 = "0.10"
