[package]
name = "unitylan-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "unitylan-coordinator"
path = "src/main.rs"

[dependencies]
unitylan-common.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
toml.workspace = true

axum = "0.8"
ipnet = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }
twilight-http = "0.17.1"
twilight-model = "0.17.1"
async-trait = "0.1.89"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
twilight-gateway = "0.17"
twilight-util = { version = "0.17", features = ["builder"] }
stun = "0.17"
