[package]
name = "unitylan-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "unitylan-engine"
path = "src/main.rs"

[dependencies]
unitylan-common.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
toml.workspace = true

clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
defguard_wireguard_rs = "0.10.0"
igd-next = { version = "0.17", features = ["aio_tokio"] }
interprocess = { version = "2.4.2", features = ["tokio"] }
base64 = "0.22"
sha2 = "0.10"
hickory-proto = "0.26.1"
turn = "0.17"
webrtc-util = "0.17"
webrtc-ice = "0.17"
async-trait = "0.1"
surge-ping = "0.8"
futures = "0.3"
semver = "1"
self-replace = "1"
ipnet = "2"
if-addrs = "0.13"

[target.'cfg(unix)'.dependencies]
# Resolve `control_group` (name → gid) to own the control socket root:<group>.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
# Build the control-pipe DACL as an SDDL wide-string (see control/server.rs). Version-matched to
# interprocess's own widestring so `SecurityDescriptor::deserialize`'s `&U16CStr` type unifies.
widestring = "1"
