[package]
name = "unitylan-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "unitylan-gui"
path = "src/main.rs"

[dependencies]
unitylan-common.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true

# tokio executor so the async control-socket client runs inside iced's runtime.
iced = { version = "0.13", features = ["tokio", "svg"] }
# Cross-platform local socket (unix socket / Windows named pipe) for the control channel.
interprocess = { version = "2.4.2", features = ["tokio"] }
# Open the Discord authorize URL in the user's default browser.
open = "5"
iced_aw = { version = "0.12", default-features = false, features = ["drop_down"] }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3.5"

[target.'cfg(windows)'.dependencies]
# System tray via a Shell_NotifyIcon window; needs a Win32 message pump we run ourselves.
tray-icon = "0.19"
# Raw Win32 for the tray thread's message loop (GetMessage/DispatchMessage + a refresh timer).
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
